--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ ipython = "^8.14.0"
 types-requests = "^2.31.0.2"
 tox = "^4.9.0"
 pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pre-commit = "^3.3.3"
+black = "^23.7.0"
 
 [tool.poetry.scripts]
 mewicli = "mewicli.cli:app"
