--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+Python = ">=3.9"
 typer = "^0.9.0"
 requests = "^2.31.0"
 
@@ -44,6 +44,12 @@ pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pre-commit = "^3.3.3"
 black = "^23.7.0"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.4.2"
+mkdocs-material = "^9.0.12"
+mkdocstrings = {extras = ["python"], version = "^0.20.0"}
+mkdocs-autorefs = "^0.4.1"
 
 [tool.poetry.scripts]
 mewicli = "mewicli.cli:app"
@@ -97,6 +103,10 @@ ignore = [
     "PGH003",
     "PGH004",
 ]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]
+# "src/mewicli/cli.py" = ["B008"]
 
 [tool.mypy]
 python_version = 3.11
