--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 Python = ">=3.9"
-typer = "^0.9.0"
+typer = { version = "^0.9.0", extras = ["all"] }
 requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
