--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-Python = ">=3.9"
+python = ">=3.9"
 typer = { version = "^0.9.0", extras = ["all"] }
 requests = "^2.31.0"
 
